# Portfolio

./: ABOUTME.md  README.md
PROJECTS/Automated Data Pipeline & Data Flow in Azure/: Automated Data Pipeline& Data Flow in Azure.MD  README.MD
PROJECTS/Comprehensive Infrastructure Orchestration and Monitoring from Day 0 to Day 2 Operations./: README.MD
PROJECTS/Credit Scoring Model Development Project/: Credit Scoring Model Documentation.docx  Credit_Scoring (Pandas).ipynb  Credit_Scoring (PySpark).ipynb  README.MD  c1_Model_Prediction.csv  c2_Analysis_CreditScoring.xlsx
PROJECTS/Dataproc-Driven Data Processing: Hadoop, Spark, and Amazon Redshift Integration/: README.MD  RedshiftWithSpark.ipynb  SparkProcessing.ipynb
PROJECTS/End-To-End Project with GCP/: README.MD  checkRow.py  pyproject.toml
PROJECTS/End-To-End Project with GCP/dags/: DEB2-gcsToBigquery.json  movements-2023-05-24.csv  movements-2023-05-26.csv  movements-2023-08-20.csv  movements-2023-09-03.csv  movements-2023-09-09.csv  networkrail_movements_to_gcs_and_then_bigquery.py
PROJECTS/End-To-End Project with GCP/dbt/: profiles.yml
PROJECTS/End-To-End Project with GCP/dbt/networkrail/: AnalyticsDBTKeyfile.json  dbt_project.yml  packages.yml
PROJECTS/End-To-End Project with GCP/dbt/networkrail/models/marts/: _exposures.yml  fct_movements.sql  operating_company_that_has_highest_number_of_on_time_trains.sql
PROJECTS/End-To-End Project with GCP/dbt/networkrail/models/staging/networkrail/: _models.yml
PROJECTS/End-To-End Project with GCP/logs/scheduler/: latest
Projects/Sales Project/: README.MD  (+2 more)
(+61 files in other folders)
