[tool.poetry]
name = "07-end-to-end-project"
version = "0.1.0"
description = ""
authors = ["Big <chaphowasit.work@gmail.com>"]
readme = "README.md"
packages = [{include = "07_end_to_end_project"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.29.0"
pysftp = "^0.2.9"
psycopg2 = "^2.9.6"
dbt-core = "^1.5.0"
dbt-bigquery = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
